feat: working Be
