# apps/backend/src/course-files/controllers/course-files.controller.ts
@@ -10,17 +10,13 @@ import {
 import { ApiBearerAuth, ApiOkResponse, ApiTags } from "@nestjs/swagger";
 
 import { CourseFilesService } from "../services/course-files.service.js";
-import { CoursesMetaService } from "../services/courses-meta.service.js";
 import { FileMetaDto } from "../dtos/FileMetaDto.js";
 import { FileStructureDto } from "../dtos/FileStructureDto.js";
 
 @Controller("course-files")
 @ApiTags("Course Files")
 export class CourseFilesController {
-    constructor(
-        private readonly courseFileService: CourseFilesService,
-        private readonly courseMetaService: CoursesMetaService
-    ) {}
+    constructor(private readonly courseFileService: CourseFilesService) {}
 
     @Get(":courseName")
     @HttpCode(HttpStatus.OK)
@@ -28,10 +24,7 @@ export class CourseFilesController {
     async listCourseFiles(
         @Param("courseName") courseName: string
     ): Promise<FileStructureDto> {
-        // eslint-disable-next-line sonarjs/no-small-switch
-        const courseMeta = this.courseMetaService.getOne(courseName);
-
-        return await this.courseFileService.mapFiles(courseMeta);
+        return await this.courseFileService.mapFiles(courseName);
     }
 
     @UseGuards(DefaultAuthGuard)
@@ -43,9 +36,11 @@ export class CourseFilesController {
         @Param("courseName") courseName: string,
         @Param("b64Path") b64Path: string
     ): Promise<FileMetaDto> {
-        const path = Buffer.from(b64Path, "base64").toString("ascii");
         // eslint-disable-next-line sonarjs/no-small-switch
 
-        return await this.courseFileService.getFileContents(path);
+        return await this.courseFileService.getCourseFileContents(
+            b64Path,
+            courseName
+        );
     }
 }
