# apps/backend/src/course-files/dtos/FileMetaDto.ts
@@ -1,8 +1,10 @@
-import { ApiProperty } from "@nestjs/swagger";
+import { ApiProperty, ApiPropertyOptional } from "@nestjs/swagger";
 
 export class FileMetaDto {
     @ApiProperty()
     public contents!: string;
     @ApiProperty()
     public fileLocation!: string;
+    @ApiPropertyOptional()
+    public nearestReadmeLocation?: string;
 }
